# digital-forensic-agent

./: .gitignore  DESIGN.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  collection_routes.py  database.py  main.py  models.py  schemas.py  storage.py
backend/app/services/: analysis_types.py  analyzer.py  artifact_analysis.py  collection.py  collection_catalog.py  forensics.py  recommendations.py  reports.py  timeline_adapters.py
backend/dfatool/: cli.py
backend/dfatool/mft/: __init__.py  attributes.py  binary.py  constants.py  limits.py  models.py  parser.py  paths.py  provenance.py  records.py  timeline.py
backend/dfatool/usn/: __init__.py  binary.py  constants.py  models.py  parser.py  timeline.py
backend/tests/: collection_flow_helpers.py  fixtures_mft.py  fixtures_usn.py  test_api_flow.py  test_collection_flow.py  test_dfatool_mft.py  test_dfatool_usn.py  test_forensics.py  test_mft_artifact_analysis.py  test_usn_artifact_analysis.py
docs/: architecture.md  forensic-handling.md
frontend/: index.html  package.json
frontend/src/: App.tsx  styles.css
scripts/: build-frontend-temp.ps1  start-frontend-temp.ps1
