[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-forensic-automation-agent"
version = "0.1.0"
description = "Local-first Windows NTFS disk image triage API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "pytest-cov>=5.0",
]
forensics = [
  "dfvfs>=20240505",
  "pytsk3>=20230125",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
